editing some funky headers

--- a/README.html
+++ b/README.html
@@ -171,9 +171,11 @@ pre code {
 </div>
 
 
-<p>#cawa-breeding</p>
+<div id="cawa-breeding" class="section level1">
+<h1>cawa-breeding</h1>
 <p>Code and workflow for bioinformatic processing and analysis done to find conservation units in the Canada Warbler (<em>Cardellina canadensis</em>).</p>
-<p>##Overview of workflow:</p>
+<div id="overview-of-workflow" class="section level3">
+<h3>Overview of workflow:</h3>
 <ol style="list-style-type: decimal">
 <li>Preprocessing</li>
 <li>Calling variants</li>
@@ -183,6 +185,8 @@ pre code {
 <li>Management unit analysis</li>
 </ol>
 <p>Supercomputing acknowledgements: &gt; This work utilized the Summit supercomputer, which is supported by the National Science Foundation (awards ACI-1532235 and ACI-1532236), the University of Colorado Boulder, and Colorado State University. The Summit supercomputer is a joint effort of the University of Colorado Boulder and Colorado State University.</p>
+</div>
+</div>
 
 
 
